Fix nonuniform spacing in new articles list

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ button.main-article-button {
 
 div.new-article-list {
   background-color: var(--verydarkblue);
-  margin-top: 4rem;
+  margin-top: 3rem;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   padding-left: 1.5rem;
@@ -111,12 +111,12 @@ div.new-article-list {
 
   display:flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 div.new-article {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 h2.new-header {
   font-size: 32px;
